--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3ae0cadb",
+   "id": "9093fc2e",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dfb2c7a6",
+   "id": "8938b41c",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72225d43",
+   "id": "81fb3c22",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55848b1f",
+   "id": "31ae9a59",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9097af1f",
+   "id": "24e0f595",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91c1b885",
+   "id": "999f8ee8",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ac7b7b9",
+   "id": "4d56783c",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cb1d3fe3",
+   "id": "8434da16",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b208b275",
+   "id": "dc16cc19",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c1969c26",
+   "id": "5486afdf",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "14b35f50",
+   "id": "ece7dd6b",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a5586ea7",
+   "id": "b1751d06",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2da1adf0",
+   "id": "0623dc33",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f0d45a6f",
+   "id": "659edac9",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0e98f08",
+   "id": "c23f6a4d",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "13964b5e",
+   "id": "d1ff16aa",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8281cdc4",
+   "id": "47274fb9",
    "metadata": {},
    "source": [
     "# Quotes or no quotes?\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8fb63e13",
+   "id": "bb429a9f",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b9865a02",
+   "id": "748ebbc8",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89e6870b",
+   "id": "694dfcbb",
    "metadata": {},
    "source": [
     "# Variable names\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e3d19be0",
+   "id": "20b0e4f9",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4f2bc829",
+   "id": "a7878688",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f3116e10",
+   "id": "6b49c2e6",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ff40b02b",
+   "id": "b91feaf2",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fceab54",
+   "id": "9bc65fc3",
    "metadata": {},
    "source": [
     "# To use Markdown mode\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2488175c",
+   "id": "947937df",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e17520c",
+   "id": "260450fe",
    "metadata": {},
    "source": [
     "# Exercise: Greet yourself\n",
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9a985b27",
+   "id": "2a1567d1",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d353f22",
+   "id": "f9d59d40",
    "metadata": {},
    "source": [
     "# Getting input from the user\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3f611a14",
+   "id": "2868f647",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "1911cd63",
+   "id": "1d7eb3f7",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0e63ac34",
+   "id": "a0e87421",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "15fd4be0",
+   "id": "4c403517",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37ea501c",
+   "id": "285d63bb",
    "metadata": {},
    "source": [
     "# Exercise: Multi-part greeting\n",
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "92cbcd6f",
+   "id": "1b375f24",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77668597",
+   "id": "032a27f8",
    "metadata": {},
    "source": [
     "# f-strings\n",
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d9b81e1a",
+   "id": "ab612e37",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "49d109a5",
+   "id": "50610703",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6cafd71",
+   "id": "4177b53f",
    "metadata": {},
    "source": [
     "# Comparing values\n",
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "c161415e",
+   "id": "76e66a7f",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c745e831",
+   "id": "9597465a",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4ff17b6f",
+   "id": "dab51a6a",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4f9c3350",
+   "id": "62f14ee8",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a14d4dbf",
+   "id": "f40f2392",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "3a4ff72e",
+   "id": "0ce32135",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "063e9084",
+   "id": "239f03b8",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "26f42e2a",
+   "id": "e3ab95f0",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df9700a4",
+   "id": "661f2fab",
    "metadata": {},
    "source": [
     "# Comparison operators\n",
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "7f40d9ae",
+   "id": "48e6fb1e",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a26c6eb1",
+   "id": "eb46035a",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "b8d8c8f7",
+   "id": "4042fe2c",
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "60f94182",
+   "id": "35f34c9e",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "ae32bc74",
+   "id": "4d325da3",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d732063c",
+   "id": "467a5cb9",
    "metadata": {},
    "source": [
     "# Conditional execution\n",
@@ -1128,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "9f3beeec",
+   "id": "4e830778",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef579529",
+   "id": "19a7590b",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fe3aa0c",
+   "id": "699dd164",
    "metadata": {},
    "source": [
     "# Exercise: Which word comes first?\n",
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "83e9a7f0",
+   "id": "2f576714",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "498cb37e",
+   "id": "3e1f1730",
    "metadata": {},
    "source": [
     "# More sophisticated comparisons\n",
@@ -1225,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "8556b834",
+   "id": "1001708e",
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cebcc288",
+   "id": "6595b0a0",
    "metadata": {},
    "source": [
     "# Exercise: Which word comes first? \n",
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99d1267a",
+   "id": "76943246",
    "metadata": {},
    "source": [
     "Example:\n",
@@ -1281,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "6b85f970",
+   "id": "473fa2b3",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "2b4ce0f4",
+   "id": "50fe7b8f",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "906e26ef",
+   "id": "e23cc0f3",
    "metadata": {},
    "source": [
     "# Combining conditions\n",
@@ -1353,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7dc2fe04",
+   "id": "6ec47a20",
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "21447062",
+   "id": "314877e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "4701ef3c",
+   "id": "af47877b",
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "66e0498f",
+   "id": "64e0d94b",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "a29bcfd8",
+   "id": "76f4496a",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "887eae48",
+   "id": "3a52b9d1",
    "metadata": {},
    "source": [
     "# Exercise: Name and company\n",
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "d10c9811",
+   "id": "fdbe72b5",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "57113384",
+   "id": "20a05aaa",
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "a663c29f",
+   "id": "b2af466e",
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7bae343",
+   "id": "ea3e5cd2",
    "metadata": {},
    "source": [
     "# The `not` logical operator\n",
@@ -1604,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "684dda25",
+   "id": "1bb72da1",
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1627,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "a81b1589",
+   "id": "9ce7e4cc",
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77f1e748",
+   "id": "9dcc2971",
    "metadata": {},
    "source": [
     "# Numbers\n",
@@ -1662,7 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "b46fa211",
+   "id": "31906843",
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1686,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "98d857be",
+   "id": "f58e99eb",
    "metadata": {},
    "outputs": [
     {
@@ -1710,7 +1710,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "40fc3409",
+   "id": "32f77da2",
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "11170e31",
+   "id": "d15a6e21",
    "metadata": {},
    "outputs": [
     {
@@ -1752,7 +1752,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "af9eb4dc",
+   "id": "1a543160",
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1773,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "8812d5d7",
+   "id": "0027b739",
    "metadata": {},
    "outputs": [
     {
@@ -1794,7 +1794,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "c3d8963f",
+   "id": "f4f81c9b",
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1815,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "27b348ab",
+   "id": "61891c04",
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1836,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "6e8b1cfb",
+   "id": "b95cf249",
    "metadata": {},
    "outputs": [
     {
@@ -1857,7 +1857,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "23da9b62",
+   "id": "d2edf7dc",
    "metadata": {},
    "outputs": [
     {
@@ -1878,7 +1878,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "9f2cc8c3",
+   "id": "4e5d9aa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1891,7 +1891,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "c857ed2b",
+   "id": "6fe3c5a7",
    "metadata": {},
    "outputs": [
     {
@@ -1915,7 +1915,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "d40847b7",
+   "id": "3b481f0f",
    "metadata": {},
    "outputs": [
     {
@@ -1941,7 +1941,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "404dc65f",
+   "id": "e14a41b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1953,7 +1953,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "2e816d36",
+   "id": "851a153f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1963,7 +1963,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "386d44ee",
+   "id": "179275a2",
    "metadata": {},
    "outputs": [
     {
@@ -1990,7 +1990,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "42889690",
+   "id": "223537cd",
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2014,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "e23641cc",
+   "id": "61e69d64",
    "metadata": {},
    "outputs": [
     {
@@ -2035,7 +2035,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "03bfc40e",
+   "id": "c1f2b783",
    "metadata": {},
    "outputs": [
     {
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f473f0d2",
+   "id": "10c94edf",
    "metadata": {},
    "source": [
     "# Exercise: Guessing game\n",
@@ -2077,7 +2077,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "c4d4ae51",
+   "id": "f37de40f",
    "metadata": {},
    "outputs": [
     {
@@ -2108,7 +2108,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "4bc4a378",
+   "id": "e6087734",
    "metadata": {},
    "outputs": [
     {
@@ -2129,7 +2129,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "288cdb90",
+   "id": "2cf28d40",
    "metadata": {},
    "outputs": [
     {
@@ -2150,7 +2150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f6c73a0",
+   "id": "8e31ce2d",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2164,7 +2164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91174678",
+   "id": "ca74d954",
    "metadata": {},
    "source": [
     "# Floats\n",
@@ -2175,7 +2175,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "9daec60b",
+   "id": "aa532bc8",
    "metadata": {},
    "outputs": [
     {
@@ -2197,7 +2197,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "995b09c3",
+   "id": "29d6bd74",
    "metadata": {},
    "outputs": [
     {
@@ -2219,7 +2219,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "b1d6da20",
+   "id": "350e92df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2229,7 +2229,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "a4800bf1",
+   "id": "60e4fc81",
    "metadata": {},
    "outputs": [
     {
@@ -2254,7 +2254,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "298370d6",
+   "id": "6734f387",
    "metadata": {},
    "outputs": [
     {
@@ -2279,7 +2279,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "c88adaf3",
+   "id": "1bec1717",
    "metadata": {},
    "outputs": [
     {
@@ -2300,7 +2300,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "7809603a",
+   "id": "155862bb",
    "metadata": {},
    "outputs": [
     {
@@ -2320,7 +2320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b921b506",
+   "id": "565eb7e5",
    "metadata": {},
    "source": [
     "# Rule for converting\n",
@@ -2331,7 +2331,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "cbc3a545",
+   "id": "beb9402b",
    "metadata": {},
    "outputs": [
     {
@@ -2353,7 +2353,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "4d3ba9c8",
+   "id": "bd607da3",
    "metadata": {},
    "outputs": [
     {
@@ -2375,7 +2375,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "7719c78e",
+   "id": "d1766512",
    "metadata": {},
    "outputs": [
     {
@@ -2396,7 +2396,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "6b7a8f0e",
+   "id": "2a7789b8",
    "metadata": {},
    "outputs": [
     {
@@ -2416,8 +2416,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 114,
+   "id": "ad7ff4cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get a float back, rounded to no more than 3 digits after the decimal\n",
+    "round(0.1 + 0.2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a57cd8a2",
+   "id": "12283493",
    "metadata": {},
    "outputs": [],
    "source": []
