--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -169,7 +169,9 @@
    "id": "80738ff3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "round(0.1 + 0.2, 3)"
+   ]
   }
  ],
  "metadata": {
