--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "45d2e921",
+   "id": "307e2e3b",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "89311194",
+   "id": "406517c5",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f3ce996a",
+   "id": "3af748dd",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d75cba16",
+   "id": "95ffc852",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b6a30519",
+   "id": "5d2bfc56",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ee27b0bc",
+   "id": "77592c05",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "dcc8ba99",
+   "id": "3dcb5493",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "4ae9dadf",
+   "id": "2d735661",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117800bd",
+   "id": "4a2e800c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1719ebd",
+   "id": "2e7c31e2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "551ba414",
+   "id": "cd624166",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "d5b79673",
+   "id": "1c3d7de7",
    "metadata": {},
    "outputs": [
     {
@@ -251,16 +251,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1fc70e4a",
+   "execution_count": 58,
+   "id": "8c9adb40",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s= \"102932103\"\n",
+    "len(s)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec30e958",
+   "id": "75a7dd8d",
    "metadata": {},
    "outputs": [],
    "source": []
