--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2252850d",
+   "id": "eb588146",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "05b1f966",
+   "id": "14a27599",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "089dcb49",
+   "id": "c32f09ab",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dee62e32",
+   "id": "e09706f1",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c838dd1c",
+   "id": "f4ced882",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2084bb07",
+   "id": "c70aa002",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b50ca0c9",
+   "id": "77eed6be",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "af6edfde",
+   "id": "56ec4b30",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e101844f",
+   "id": "b27cc896",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b124a364",
+   "id": "d11c8036",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5fdf2a3",
+   "id": "04bc1a23",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7b00473d",
+   "id": "26627df1",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "56ad50f0",
+   "id": "875e78f3",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "18e185cd",
+   "id": "6f68158b",
    "metadata": {},
    "outputs": [
     {
@@ -270,17 +270,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39e63634",
+   "id": "91639799",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = input('Enter your name: ')\n",
+    " name = input('Enter your name: ')\n",
     "\n",
-    "if name == 'Reuven':\n",
-    "    print('Hello, boss!')\n",
-    "    print('It is so great to see you again!')\n",
-    "    print('A third line')\n",
-    "    print('A fourth line')\n",
+    "if name == 'Shraddha':\n",
+    "    print('Hello, Madam!')\n",
     "else:\n",
     "    print(f'Hello, {name}. Who are you?')"
    ]
@@ -288,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "da7565c2",
+   "id": "510659f8",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2a4e665a",
+   "id": "a6afb1b0",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a5d02cdb",
+   "id": "791718f9",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "75066295",
+   "id": "5c6151a4",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "795e3149",
+   "id": "204bb5f9",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "19a611aa",
+   "id": "14bd126a",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "01fbc9cb",
+   "id": "dd990922",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a409ae42",
+   "id": "de9ae5dd",
    "metadata": {},
    "outputs": [],
    "source": []
