--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "307e2e3b",
+   "id": "a53074dd",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "406517c5",
+   "id": "9e690384",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3af748dd",
+   "id": "bdf7321c",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "95ffc852",
+   "id": "6cbace84",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5d2bfc56",
+   "id": "391e542f",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "77592c05",
+   "id": "3b0b7900",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3dcb5493",
+   "id": "0969265e",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2d735661",
+   "id": "2dff5d9f",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a2e800c",
+   "id": "1368ac73",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e7c31e2",
+   "id": "d902f4dd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "cd624166",
+   "id": "1ead75d3",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "1c3d7de7",
+   "id": "3375fa3b",
    "metadata": {},
    "outputs": [
     {
@@ -251,8 +251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "8c9adb40",
+   "execution_count": 61,
+   "id": "31d5f883",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "9"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,8 +273,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "id": "d51468d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello 'joe'\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"hello 'joe'\"\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "75a7dd8d",
+   "id": "8f9c53e7",
    "metadata": {},
    "outputs": [],
    "source": []
